# internal/models/pagination.go
@@ -1,13 +1,13 @@
 package models
 
 type PageInfo struct {
-	CurrentPage int  `json:"currentPage"`
-	TotalPages  int  `json:"totalPages"`
-	HasNextPage bool `json:"hasNextPage"`
-	HasPrevPage bool `json:"hasPrevPage"`
+	CurrentPage int  `json:"currentPage" validate:"required"`
+	TotalPages  int  `json:"totalPages" validate:"required"`
+	HasNextPage bool `json:"hasNextPage" validate:"required"`
+	HasPrevPage bool `json:"hasPrevPage" validate:"required"`
 }
 
 type Pagination[T any] struct {
-	PageInfo PageInfo `json:"pageInfo"`
-	Items    []T      `json:"items"`
+	PageInfo PageInfo `json:"pageInfo" validate:"required"`
+	Items    []T      `json:"items" validate:"required"`
 }
